--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <span>09h-12h</span>
           </header>
           <ul id="period-morning" class="period">
-            <!-- Exemplo  -->
+            <!-- Exemplo  
             <li>
               <strong>11:00</strong>
               <span>Rodrigo Gonçalves</span>
@@ -101,6 +101,7 @@
                 class="cancel-icon"
               />
             </li>
+            -->
           </ul>
         </section>
 
@@ -111,7 +112,7 @@
             <span>13h-18h</span>
           </header>
           <ul id="period-afternoon" class="period">
-            <!-- Exemplo -->
+            <!-- Exemplo 
             <li>
               <strong>14:00</strong>
               <span>Rodrigo Gonçalves</span>
@@ -121,6 +122,7 @@
                 class="cancel-icon"
               />
             </li>
+            -->
           </ul>
         </section>
 
@@ -131,7 +133,7 @@
             <span>19h-21h</span>
           </header>
           <ul id="period-night" class="period">
-            <!-- Exemplo -->
+            <!-- Exemplo 
             <li>
               <strong>19:00</strong>
               <span>Rodrigo Gonçalves</span>
@@ -141,6 +143,7 @@
                 class="cancel-icon"
               />
             </li>
+            -->
           </ul>
         </section>
       </aside>
